--- a/styles.css
+++ b/styles.css
@@ -185,11 +185,9 @@ nav
 #moh {
   background-color: navy;
   color: white;
-  font-size: 17px;
   cursor:pointer;
   width:200px;
   text-align:center;
-  color: white;
   font-style: italic;
   font-size: 20px;
   font-weight: bold;
@@ -199,22 +197,19 @@ nav
   display: none;
   position: absolute;
   background-color: lightblue;
-  min-width: 150px;
+  width: 150px;
   z-index: 1;
   color: navy;
   text-align: center;
+  font-style: italic;
   text-transform: capitalize;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 17px;
 }
 .dropdown-content a {
   padding: 12px;
   text-decoration: none;
   display: block;
-}
-#moh:hover .dropdown-content
-{
-	display: block;
 }
 .dropdown:hover .dropdown-content {
   display: block;
